# fedimint-custom-modules-example

./: Cargo.toml  README.md  flake.nix  justfile
fedimint-cli/: Cargo.toml
fedimint-cli/src/: main.rs
fedimint-dummy-client/: Cargo.toml
fedimint-dummy-client/src/: lib.rs
fedimint-dummy-common/: Cargo.toml
fedimint-dummy-server/: Cargo.toml
fedimint-dummy-server/src/: lib.rs
fedimint-dummy-tests/: Cargo.toml
fedimint-dummy-tests/tests/: tests.rs
fedimintd/: Cargo.toml
fedimintd/src/: fedimintd.rs
tests/: Cargo.toml
tests/tests/: tests.rs
