[package]
name = "fedimint-cli-custom"
version = "0.3.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimint-cli with custom module set"

[[bin]]
name = "fedimint-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.66"
fedimint-cli = { workspace = true }
fedimint-dummy-client = { path = "../fedimint-dummy-client" }
fedimint-core = { workspace = true }
tokio = { version = "1.25.0", features = ["full", "tracing"] }

[build-dependencies]
fedimint-build = { git = "https://github.com/fedimint/fedimint" }